test/fail/optargs/optarg_too_few.lly
#[
SyntaxError: Function f expects 1 to 2 args, but got 0.
Where: File "optarg_too_few.lly" at line 10
]#

define f(a: integer, b: *integer = 10) {

}

f()
